appId: com.renta4wheel.customer.acceptance
---
- scrollUntilVisible:
    element: Choose exterior condition photo
    direction: DOWN
- tapOn: Choose exterior condition photo
- runFlow:
    when:
      visible: Allow Full Access
    commands:
      - tapOn: Allow Full Access
- runFlow:
    when:
      visible: Allow all
    commands:
      - tapOn: Allow all
- tapOn:
    text: Photo[ ,].*
    index: 0
- runFlow:
    when:
      visible: Add
    commands:
      - tapOn: Add
- scrollUntilVisible:
    element: Upload exterior condition photo
    direction: DOWN
- tapOn: Upload exterior condition photo
